--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap");
 body {
   display: flex;
   justify-content: center;
@@ -5,9 +6,46 @@ body {
   flex-direction: column;
   height: 100vh;
 }
-
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
+}
+.time {
+  color: #17d4fe;
+  font-family: "Syne Mono", monospace;
+  font-size: 60px;
+}
 .name {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.name i {
+  margin-left: 10px;
+  color: #17d4fe;
+}
+.name i:hover {
+  cursor: pointer;
+}
+
+.name__inputName {
+  border-radius: 20px;
+  border: 1px solid #17d4fe;
+}
+
+.name__inputName:focus {
+  outline: none;
 }
